tests/paczka1/fuzzy1/37426178.err
Error in line 1: a8ouAwPc5N A251 7,36
Error in line 6: 4x1hMJxdT A251 57,j
Error in line 19: S419 S782 10,8
Error in line 8: 4x1hMJxdT A251 34,8
Error in line 27: QuErIgM5TC S419 74t3
Error in line 12: KytUK A251 77,3
Error in line 32: KytUK S782 73,0
Error in line 34: KytUK S87 5,3
Error in line 33: QuErIgM5TC S419 249,6
Error in line 37: QuErIgM5TC A251 99,9
